--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>ƒeƒXƒg</title>
+<title>ï¿½eï¿½Xï¿½g</title>
 </head>
 <body>
-test
+test<br />
+new features!<br />
 </body>
 </html>
